--- a/test-gut.html
+++ b/test-gut.html
@@ -1,1 +1,513 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Home Repairs Doncaster - Guttering, Painting, uPVC & Pressure Washing - Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/">
+<meta name="description" content="Home Repairs 4U provides internal home repairs, gutter cleaning and repairs, exterior painting, uPVC Restoration, window cleaning, and pressure washing across Doncaster, Askern, Bentley, Campsall, Adwick-Le-Street and surrounding areas. Call today for reliable local service.">
+
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Pressure Washing Doncaster</h2>
+<p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+<p>Looking to restore your driveway, patio, or outdoor surfaces? Our
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
+<img src="/images/pressure-wash.webp"
+alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section> 
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Guttering Services Doncaster</h2>
+<p>Guttering services are essential for protecting your home from water damage. Over time, gutters can fill with leaves, moss and debris, stopping rainwater from flowing away properly. Cleaning and clearing your gutters helps prevent blockages, leaks and overflowing that can damage walls, roofs and foundations. If your gutters are leaking, sagging or broken, repairs can restore them before bigger problems develop. In cases where gutters are badly damaged or outdated, full replacement gives your home a fresh, reliable system that works efficiently. Regular gutter maintenance keeps rainwater under control, protects your property, and saves money by avoiding costly structural repairs later on.</p>
+<a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Grab an instant quote for our guttering services">📝 Instant Guttering Quotes</a>
+<p>Need guttering cleared, washed, repaired or replaced? Our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html"
+title="Gutters cleared, cleaned, repaired, and replaced in Doncaster">
+professional full guttering services,
+</a> covering Doncaster and surrounding areas.</p>
+<img src="/images/cleaned-gutters-before-after.webp"
+alt="Guttering services in Doncaster including cleaning, clearing, repairs and full gutter replacement for homes"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Exterior Decorating Doncaster</h2>
+<p>External decorating improves both the look and protection of your property. External house painting refreshes tired walls, boosts kerb appeal and adds a protective layer against weather damage. Painting garden rails and gates not only makes them look smarter but also helps prevent rust and wear. Fence painting keeps timber strong, protected from rot, and looking clean and well cared for. Regular exterior decorating helps your property stay attractive, increases its lifespan, and reduces the need for costly repairs caused by weather, damp and general wear and tear..</p>
+<img src="/images/house-before-after.webp"
+alt="Exterior painting in Doncaster including houses, metal garden rails, gates and wooden fencing"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>uPVC Restoration Doncaster</h2>
+<p>uPVC restoration is all about bringing tired, dirty frames and doors back to life. Over time, uPVC can become stained, dull and discoloured from weather, pollution and everyday wear. Professional cleaning restores the original look, making windows and doors bright, fresh and well cared for. This also includes cleaning fascias and guttering to the highest possible standard, improving the overall appearance of your home. Regular uPVC restoration not only makes your property look better but also helps extend the life of your fittings by keeping them clean, protected and properly maintained.</p>
+<img src="/images/upvc-restoration.webp"
+alt="uPVC restoration in Doncaster with detailed cleaning of frames, doors, fascias and guttering"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 8 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Other Services</h2>
+<p>Other services from Home Repairs 4U cover a wide range of additional outdoor maintenance and repair work, complementing our core offerings. These include minor outdoor repairs, such as fixing gates, fences, sheds, and decking, as well as addressing any wear and tear that can affect the safety and appearance of your property. We also extend our services to cover seasonal and one-off tasks, including external woodwork treatment, roof maintenance, and cleaning of driveways, paths, and patios. Whether it’s repairing a broken fence panel, restoring faded garden structures, or preparing surfaces for painting, these services ensure every part of your property is cared for. By combining our expertise in guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing, we provide a complete solution to maintain your home inside and out. Each task is completed with attention to detail and professionalism, keeping your property safe, functional, and visually appealing. With our extended services, you can rely on Home Repairs 4U to handle all the extra jobs that make a real difference to your home’s upkeep and longevity</p>
+</section>
+ 
+<!-- ✅ FAQ SECTION -->
+<section style="max-width:900px; margin:40px auto; padding:0 15px;">
+
+<h2 style="text-align:center; margin-bottom:30px;">Frequently Asked Questions</h2>
+
+<div>
+<p><strong>What types of internal minor home repairs do you handle?</strong><br>
+We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear.</p>
+
+<p><strong>Do you offer gutter cleaning and maintenance?</strong><br>
+Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage.</p>
+
+<p><strong>Can you repair damaged gutters?</strong><br>
+Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency.</p>
+
+<p><strong>What does exterior decorating include?</strong><br>
+Exterior decorating covers external house painting, metal garden rails and gate painting, also fence painting to refresh your property's look and protect surfaces.</p>
+
+<p><strong>Do you offer uPVC restoration?</strong><br>
+Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity. </p>
+
+<p><strong>Can you clean my conservatory?</strong><br>
+We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard.</p>
+
+<p><strong>How often should I have my windows cleaned?</strong><br>
+Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained.</p>
+
+<p><strong>What surfaces can you pressure wash?</strong><br>
+We pressure wash driveways, paths, walls, decking and roofs, removing moss, algae, dirt and grime safely and effectively.</p>
+
+<p><strong>Are your services suitable for all property types?</strong><br>
+Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs.</p>
+
+<p><strong>Do you offer same-day or urgent repairs?</strong><br>
+We aim to respond quickly and can often schedule repairs urgently to prevent further damage.</p>
+
+<p><strong>Is your work insured?</strong><br>
+Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work.</p>
+
+<p><strong>How do i schedule a service?</strong><br>
+Simply call us on 07735 873694 at a time convenient to you.</p>
+</div>
+
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+
+ <!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+document.getElementById("lightbox").style.display="flex";
+document.getElementById("lightboxImg").src=src;
+}
+function closeLightbox(){
+document.getElementById("lightbox").style.display="none";
+}
+</script>
+
+<!-- ✅ FAQ JSON-LD FOR RICH RESULTS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "What types of internal minor home repairs do you handle?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We handle small repairs inside your home, including fixing doors, replacing broken fittings, repairing walls, and addressing general wear and tear."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer gutter cleaning and maintenance?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we clean, clear, repair, and replace gutters to ensure rainwater flows properly and your home stays protected from water damage."
+}
+},
+{
+"@type": "Question",
+"name": "Can you repair damaged gutters?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Absolutely. We fix leaks, sagging sections, and any damaged parts to restore your gutters efficiency."
+}
+},
+{
+"@type": "Question",
+"name": "What does exterior decorating include?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Exterior decorating covers external house painting, metal garden rails and gate painting, and fence painting to refresh your property's look and protect surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer uPVC restoration?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we clean and restore uPVC doors, windows, fascias, and guttering to their original condition, improving both appearance and longevity."
+}
+},
+{
+"@type": "Question",
+"name": "Can you clean my conservatory?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We provide full conservatory valets, cleaning inside and out, including the roof, frames, and glass, to a high standard."
+}
+},
+{
+"@type": "Question",
+"name": "How often should I have my windows cleaned?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Regular cleaning depends on your property, but we recommend monthly or quarterly visits to keep windows clear, bright, and well maintained."
+}
+},
+{
+"@type": "Question",
+"name": "What surfaces can you pressure wash?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We pressure wash driveways, paths, walls, decking, and roofs, removing moss, algae, dirt, and grime safely and effectively."
+}
+},
+{
+"@type": "Question",
+"name": "Are your services suitable for all property types?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, we work on houses, flats, commercial properties, and gardens, tailoring each service to your specific property needs."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer same-day or urgent repairs?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We aim to respond quickly and can often schedule repairs urgently to prevent further damage."
+}
+},
+{
+"@type": "Question",
+"name": "Is your work insured?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, Home Repairs 4U is fully insured, giving you peace of mind for all repairs and maintenance work."
+}
+},
+{
+"@type": "Question",
+"name": "How do I schedule a service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Simply call us on 07735 873694 at a time convenient to you."
+}
+}
+]
+}
+</script>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "HomeAndConstructionBusiness",
+"name": "Home Repairs 4U",
+"url": "https://homerepairs4u.com/",
+"image": "https://homerepairs4u.com/images/logo.webp",
+"telephone": "07735873694",
+"priceRange": "£",
+"openingHours": "Mo-Fr 08:00-18:00",
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Doncaster",
+"postalCode": "DN6",
+"addressCountry": "GB"
+},
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+],
+"areaServed": [
+{ "@type": "Place", "name": "Doncaster" },
+{ "@type": "Place", "name": "Bentley" },
+{ "@type": "Place", "name": "Campsall" },
+{ "@type": "Place", "name": "Askern" },
+{ "@type": "Place", "name": "Adwick-le-Street" }
+],
+"makesOffer": [
+{
+"@type": "Service",
+"name": "Internal Minor Home Repairs"
+},
+{
+"@type": "Service",
+"name": "Guttering Service"
+},
+{
+"@type": "Service",
+"name": "Exterior Decorating"
+},
+{
+"@type": "Service",
+"name": "uPVC Restoration"
+},
+{
+"@type": "Service",
+"name": "Conservatory Valets"
+},
+{
+"@type": "Service",
+"name": "Regular Window Cleaning"
+},
+{
+"@type": "Service",
+"name": "Pressure Washing"
+}
+]
+}
+</script>
+
+ <script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "WebPage",
+"name": "Home Repairs 4U - Doncaster",
+"url": "https://homerepairs4u.com/",
+"description": "Home Repairs 4U provides internal minor home repairs, guttering, exterior decorating, uPVC restoration, conservatory valets, window cleaning, and pressure washing services across Doncaster and surrounding areas.",
+"breadcrumb": {
+"@type": "BreadcrumbList",
+"itemListElement": [
+{
+"@type": "ListItem",
+"position": 1,
+"name": "Home",
+"item": "https://homerepairs4u.com/"
+}
+]
+},
+"mainEntity": [
+{
+"@type": "WebPageElement",
+"name": "Internal Minor Home Repairs",
+"cssSelector": "section:nth-of-type(1)"
+},
+{
+"@type": "WebPageElement",
+"name": "Guttering Service",
+"cssSelector": "section:nth-of-type(2)"
+},
+{
+"@type": "WebPageElement",
+"name": "Exterior Decorating",
+"cssSelector": "section:nth-of-type(3)"
+},
+{
+"@type": "WebPageElement",
+"name": "uPVC Restoration",
+"cssSelector": "section:nth-of-type(4)"
+},
+{
+"@type": "WebPageElement",
+"name": "Conservatory Valets",
+"cssSelector": "section:nth-of-type(5)"
+},
+{
+"@type": "WebPageElement",
+"name": "Regular Window Cleaning",
+"cssSelector": "section:nth-of-type(6)"
+},
+{
+"@type": "WebPageElement",
+"name": "Pressure Washing",
+"cssSelector": "section:nth-of-type(7)"
+}
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
