--- a/test-gut.html
+++ b/test-gut.html
@@ -97,6 +97,17 @@ font-weight: bold;
 cursor: pointer;
 user-select: none;
 }
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#">Services</a>
+<ul class="submenu">
+<li><a href="/pressure-washing-doncaster.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
+</ul>
+</li>
+</ul>
+</nav>
 </style>
  
 <!-- ✅ HEADER -->
@@ -116,6 +127,18 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 </header>
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#">Services</a>
+<ul class="submenu">
+<li><a href="/pressure-washing.html">Pressure Washing</a></li>
+<li><a href="/guttering-services.html">Guttering Services</a></li>
+<li><a href="/contact.html">Contact</a></li>
+</ul>
+</li>
+</ul>
+</nav>
 
  <!-- ✅ MAIN CONTENT -->
 <main style="max-width:1200px; margin:30px auto; padding:0 15px;">
