--- a/local/pressure-washing-arksey.html
+++ b/local/pressure-washing-arksey.html
@@ -128,6 +128,18 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
 <a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
 </header>
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#" class="submenu-toggle">Services ▼</a>
+<ul class="submenu">
+<li><a href="/local/pressure-washing-doncaster.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
+<li><a href="/contact.html">Contact</a></li>
+</ul>
+</li>
+</ul>
+</nav>
 
  <!-- ✅ MAIN CONTENT -->
 <main style="max-width:1200px; margin:30px auto; padding:0 15px;">
