--- a/test.html
+++ b/test.html
@@ -205,7 +205,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <nav class="main-nav" aria-label="Main navigation">
 <ul class="menu">
 <li class="has-submenu">
-<a href="#" class="submenu-toggle">Services ▼</a>
+<a href="#" class="submenu-toggle">Services</a>
 <ul class="submenu">
 <li><a href="/local/pressure-washing-doncaster.html">Pressure Washing</a></li>
 <li><a href="/guttering-services/doncaster.html">Guttering Services</a></li>
